descriptor.yml
apiVersion: v1
kind: Pod
metadata:
  # Nom du pod
  name: front-pod
  labels:
    # labels de la partie front permet de ciblé le container
    app: k8s-tp
    name: front
spec:
  containers:
    # Nom du container
  - name: front-container
  # repo de l'image à utiliser
    image: killianndev/docker-apache-example:v2
---
apiVersion: v1
kind: Pod
metadata:
  # Nom du pod
  name: back-pod
  labels:
    # labels de la partie front permet de ciblé le container
   app: k8s-tp
   name: back
spec:
  containers:
    # Nom du container
  - name: back-container
    image: killianndev/docker-backend-example:v2
---
apiVersion: v1
kind: Pod
metadata:
  # Nom du pod
  name: mysql
  labels:
    # labels de la partie front permet de ciblé le container
    app: k8s-tp
    name: database
spec:
  selector:
    matchLabels:
      run: mysql
spec:
  containers:
    # Nom du container
  - name: mysql
  # Image à utiliser pour le container
    image: mysql:latest
    ports:
      # Port pour mysql
      - containerPort: 3306
