api-svc.yml
---
kind: Service
apiVersion: v1
metadata:
  name: api-svc
spec:
  selector:
    app: k8s-tp
    name: back
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
