front-svc.yml
---
kind: Service
apiVersion: v1
metadata:
  name: front-svc
spec:
  selector:
    app: k8s-tp
    name: front
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
