ingressController.yml
# Ingress est un service permétant de faire le routing
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
# Nom du service de routing vers le back end (pour l'api)
  name: traefik-ingress-back
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "2"
spec:
  rules:
  # Protocol à utiliser
  - http:
      paths:
      # Route à utiliser pour aller vers le back end
      - path: /api
        backend:
        # Nom du service de redirection
          serviceName: api-svc
          # Port de redirection
          servicePort: 9000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-front
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - http:
      paths:
      # Route à utiliser pour aller vers le front end
      - path: /
        backend:
        # Nom du service de redirection
          serviceName: front-svc
          # Port de redirection
          servicePort: 80
